use /user/menu from in-memory than from backend
